# complete-pipeline-DW

./: README.md  docker-compose.yaml  pyproject.toml
dags/: dag.py
