[tool.poetry]
name = "complete-pipeline-dw"
version = "0.1.0"
description = ""
authors = ["cassianodescovi <cassianodescovi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
apache-airflow = ">=2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
